[package]
name = "treasure-chest-config"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
