[package]
name = "treasure-chest-log"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
